# tiago_emotion

./: CMakelists.txt  README.md  docker-compose.yml  instruction.txt  map_full_lab.pgm  map_full_lab.yaml  nav2_params.yaml  old_docker  package.xml
docker/: Dockerfile  cyclonedds (copy).xml  cyclonedds.xml  cyclonedds_wifi.xml
emotion_/: CMakeLists.txt
emotion_/docker/: Dockerfile  startup.sh
emotion_/firbit/: client_secret_461691553363-o8tldjjnhkto4thldq785f13tiir90jg.apps.googleusercontent.com.json  fitbit.py  gosia_client.json  heart_rate.csv  plot.py
emotion_/src/: README.md  client_secret_461691553363-o8tldjjnhkto4thldq785f13tiir90jg.apps.googleusercontent.com.json  emotion.py  emotion_video.py  fit_bit_txt.py  fitbit.py  fitbit_main.py  heart_rate.csv  heart_rate_names
llm_reasoner/: Dockerfile  audio_conv.py  audio_transcribe_test.py  docker-compose.yml  phi_test_keyboard.py
ros2_aruco/ros2_aruco/ros2_aruco/: aruco_basefootprint.py  aruco_node.py
src/my_vision_pkg/: CMakeLists.txt  my_map.pgm  my_map.yaml  package.xml  setup.py
src/my_vision_pkg/launch/: aud_ros.launch.py
src/my_vision_pkg/my_vision_pkg/: audio_conv.py  audio_rec.py  audio_record_conversation.py  audio_record_normal.py  frames_2026-06-11_10.32.55.gv  frames_2026-06-11_10.42.21.gv  image_emotion.py  marker_align.py  moveit_arm.cpp  nav2_goal.py  nav2_goal_norm.py  table_detect.py
