<?xml version="1.0"?>
<package format="3">
  <name>my_vision_pkg</name>
  <version>0.0.0</version>
  <description>Vision + MoveIt hybrid package</description>

  <maintainer email="root@todo.todo">root</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- C++ dependencies -->
  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>geometry_msgs</depend>
   <depend>moveit_core</depend>

  <!-- Python dependencies -->
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
